--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,39 +5,33 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="description" content="Find a registered dietitian nutritionist your way"/>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Dietiation</title>
+    <meta property="og:locale" content="en_GB" />
+    <meta name="title" id="meta-title" content="Dietition your way" />
+    <meta name="description" id="meta-description" content="Find a registered dietitian nutritionist your way, Dietitian Your Way started with the one priority to help clients get the attention and care they deserve from educated, skilled and verified nutritionists." />
+    <meta name="keywords" id="meta-keywords" content="Weight management,Blood sugar control,Blood pressure control,Navigating food allergies,Prevention,Meal planning,Lifestyle change" />
+    <meta name="author" content="Arhamsoft"/>
+    <link rel="canonical" id="meta-link-href" href="https://dietitian.arhamsoft.org/"/>
+    <meta property="og:url" id="meta-og-link" content="https://dietitian.arhamsoft.org/"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" id="meta-title-og" content="Dietition your way" />
+    <meta property="og:description" id="meta-og:description" content="ind a registered dietitian nutritionist your way, Dietitian Your Way started with the one priority to help clients get the attention and care they deserve from educated, skilled and verified nutritionists." />
+    <meta property="fb:app_id" content="1714218088926254" />
+    <meta property="og:image" content="https://dietitian.arhamsoft.org/images/dietitian-your-way.png" />
+    <meta name="twitter:title" id="meta-title" content="Dietition your way"/>
+    <meta name="twitter:image" content="https://dietitian.arhamsoft.org/images/dietitian-your-way.png"/>
+    <meta name="twitter:url" id="meta-link" content="https://dietitian.arhamsoft.org/"/>
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:description" id="meta-twitter:description" content="ind a registered dietitian nutritionist your way, Dietitian Your Way started with the one priority to help clients get the attention and care they deserve from educated, skilled and verified nutritionists." />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Dietitian</title>
+
+   
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
