--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,19 +8,19 @@
     <meta name="description" content="Find a registered dietitian nutritionist your way"/>
 
     <meta property="og:locale" content="en_GB" />
-    <meta name="title" id="meta-title" content="Dietition your way" />
+    <meta name="title" id="meta-title" content="Dietitian your way" />
     <meta name="description" id="meta-description" content="Find a registered dietitian nutritionist your way, Dietitian Your Way started with the one priority to help clients get the attention and care they deserve from educated, skilled and verified nutritionists." />
     <meta name="keywords" id="meta-keywords" content="Weight management,Blood sugar control,Blood pressure control,Navigating food allergies,Prevention,Meal planning,Lifestyle change" />
     <meta name="author" content="Arhamsoft"/>
     <link rel="canonical" id="meta-link-href" href="https://dietitian.arhamsoft.org/"/>
     <meta property="og:url" id="meta-og-link" content="https://dietitian.arhamsoft.org/"/>
     <meta property="og:type" content="website" />
-    <meta property="og:title" id="meta-title-og" content="Dietition your way" />
+    <meta property="og:title" id="meta-title-og" content="Dietitian your way" />
     <meta property="og:description" id="meta-og:description" content="Find a registered dietitian nutritionist your way, Dietitian Your Way started with the one priority to help clients get the attention and care they deserve from educated, skilled and verified nutritionists." />
     <meta property="fb:app_id" content="1714218088926254" />
     <meta property="og:image" content="https://dietitian.arhamsoft.org/images/dietitian-your-way.png" />
     <meta property="og:image:alt" content="Dietitian your way" />
-    <meta name="twitter:title" id="meta-title" content="Dietition your way"/>
+    <meta name="twitter:title" id="meta-title" content="Dietitian your way"/>
     <meta name="twitter:image" content="https://dietitian.arhamsoft.org/images/dietitian-your-way.png"/>
     <meta name="twitter:url" id="meta-link" content="https://dietitian.arhamsoft.org/"/>
     <meta name="twitter:card" content="summary"/>
